# SnakeGame

./: CMakeLists.txt  README.md
include/: Board.h  Common.h  Food.h  Game.h  MainWindow.h  ScoreManager.h  Snake.h
src/: Board.cpp  Food.cpp  Game.cpp  MainWindow.cpp  MainWindow.ui  ScoreManager.cpp  Snake.cpp  main.cpp
